tests/fail/semantics/annotation_parameter_type_mismatch/main.kira
annotation Attribute {
    parameters {
        index: Int
    }
}

construct Widget {
    annotations {
        @Attribute;
    }

    requires {
        content;
    }
}

Widget Button() {
    @Attribute("zero")
    let position: Float = 0.0;

    content {
    }
}

@Main
function entry() {
    return;
}
